--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,10 +3,15 @@
 
     <string name="app_name">GeoQuiz</string>
     <string name="action_settings">Settings</string>
-    <string name="question_text">Constantinople is the largest city in Turkey.</string>
     <string name="true_button">True</string>
     <string name="false_button">False</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
+    <string name="next_button">Next</string>
+    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
+    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indin Ocean.</string>
+    <string name="question_africa">The source of the Nile River is in Egypt.</string>
+    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
+    <string name="question_asia">Lake Baikal is the world\'s oldest ande deepest freshwater lake.</string>
 
 </resources>
