--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,10 +8,11 @@
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
     <string name="next_button">Next</string>
-    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
-    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indin Ocean.</string>
-    <string name="question_africa">The source of the Nile River is in Egypt.</string>
-    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
-    <string name="question_asia">Lake Baikal is the world\'s oldest ande deepest freshwater lake.</string>
+    <string name="prev_button">Prev</string>
+    <string name="question_oceans">1.The Pacific Ocean is larger than the Atlantic Ocean.</string>
+    <string name="question_mideast">2.The Suez Canal connects the Red Sea and the Indin Ocean.</string>
+    <string name="question_africa">3.The source of the Nile River is in Egypt.</string>
+    <string name="question_americas">4.The Amazon River is the longest river in the Americas.</string>
+    <string name="question_asia">5.Lake Baikal is the world\'s oldest ande deepest freshwater lake.</string>
 
 </resources>
